--- a/front/src/assets/styles/plain.css
+++ b/front/src/assets/styles/plain.css
@@ -20,6 +20,8 @@
   }
 
   .titleContainer{
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,6 +31,10 @@
   .background{
     background:url(../img/background.jpg) no-repeat center center fixed;
     height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
   }
   /*
   src="https://img5.goodfon.com/original/1920x1200/c/af/sssssss-aaaaaaaaaaa-ddddddddd-fffffffff-rrrrrrr.jpg"
